Physics_RT/Physics_RT/MathHeader.h

	typedef struct hkVector4* hkVector4Ref;
	typedef struct hkVector4fComparison* hkVector4fComparisonRef;
    typedef struct hkQuaternion* hkQuaternionRef;
    typedef struct hkMatrix3* hkMatrix3Ref;
    typedef struct hkRotation* hkRotationRef;
	HAVOK_C_API hkVector4Ref HAVOK_C_CALL hkVector4_new();
	HAVOK_C_API hkVector4Ref HAVOK_C_CALL hkVector4_new_xyzw(float x, float y, float z, float w);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_delete(hkVector4Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_set(hkVector4Ref ptr, float x, float y, float z, float w);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setW(hkVector4Ref ptr, float w);
    HAVOK_C_API float HAVOK_C_CALL hkVector4_getW(hkVector4Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setAll(hkVector4Ref ptr, float a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setAll3(hkVector4Ref ptr, float a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_sub(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_add(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_mul(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_div(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setAdd(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setAdd_f(hkVector4Ref ptr, hkVector4Ref v0, float v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setSub(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setSub_f(hkVector4Ref ptr, hkVector4Ref v0, float v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setMul(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setMul_f(hkVector4Ref ptr, hkVector4Ref v1, float r);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setDiv(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setDiv4(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setDot3(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setDot4(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setSubMul_f(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref b, float r);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setAddMul_f(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref b, float r);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setAddMul(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref x, hkVector4Ref y);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setSubMul(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref x, hkVector4Ref y);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setCross(hkVector4Ref ptr, hkVector4Ref v0, hkVector4Ref v1);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setReciprocal(hkVector4Ref ptr, hkVector4Ref v);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setSqrt(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setSqrtInverse(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setInterpolate(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref b, float t);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_equal(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_notEqual(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_less(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_lessEqual(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_greater(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_greaterEqual(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_lessZero(hkVector4Ref ptr);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_lessEqualZero(hkVector4Ref ptr);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_greaterZero(hkVector4Ref ptr);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_greaterEqualZero(hkVector4Ref ptr);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_equalZero(hkVector4Ref ptr);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_compare_notEqualZero(hkVector4Ref ptr);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_signBitSet(hkVector4Ref ptr);
    HAVOK_C_API hkVector4fComparisonRef HAVOK_C_CALL hkVector4_signBitClear(hkVector4Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setSelect(hkVector4Ref ptr, hkVector4fComparisonRef compareMask, hkVector4Ref trueValue, hkVector4Ref falseValue);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_zeroIfFalse(hkVector4Ref ptr, hkVector4fComparisonRef compareMask);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_zeroIfTrue(hkVector4Ref ptr, hkVector4fComparisonRef compareMask);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setFlipSign_m(hkVector4Ref ptr, hkVector4Ref v, hkVector4fComparisonRef mask);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setFlipSign(hkVector4Ref ptr, hkVector4Ref v, hkVector4Ref vSign);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setFlipSign_f(hkVector4Ref ptr, hkVector4Ref v, float sSign);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setAbs(hkVector4Ref ptr, hkVector4Ref v);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setMin(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref b);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setMax(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref b);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setClamped(hkVector4Ref ptr, hkVector4Ref a, hkVector4Ref minVal, hkVector4Ref maxVal);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setClampedToMaxLength(hkVector4Ref ptr, hkVector4Ref vSrc, float maxLen);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_equal(hkVector4Ref ptr, hkVector4Ref a);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_normalize3(hkVector4Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_normalize4(hkVector4Ref ptr);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_normalize3IfNotZero(hkVector4Ref ptr);
    HAVOK_C_API float HAVOK_C_CALL hkVector4_length3(hkVector4Ref ptr);
    HAVOK_C_API float HAVOK_C_CALL hkVector4_length4(hkVector4Ref ptr);
    HAVOK_C_API float HAVOK_C_CALL hkVector4_getComponent(hkVector4Ref ptr, int component);
    HAVOK_C_API void HAVOK_C_CALL hkVector4_setComponent(hkVector4Ref ptr, int component, float val);
    HAVOK_C_API bool HAVOK_C_CALL hkVector4_isOk1(hkVector4Ref ptr);
    HAVOK_C_API bool HAVOK_C_CALL hkVector4_isOk2(hkVector4Ref ptr);
    HAVOK_C_API bool HAVOK_C_CALL hkVector4_isOk3(hkVector4Ref ptr);
    HAVOK_C_API bool HAVOK_C_CALL hkVector4_isOk4(hkVector4Ref ptr);
    HAVOK_C_API bool HAVOK_C_CALL hkQuaternion_isOk(hkQuaternionRef ptr, float epsilon = float(1e-3f));
    HAVOK_C_API bool HAVOK_C_CALL hkMatrix3_isApproximatelyEqual(hkMatrix3Ref ptr, hkMatrix3Ref m, float epsilon = float(1e-3f));
    HAVOK_C_API bool HAVOK_C_CALL hkMatrix3_isSymmetric(hkMatrix3Ref ptr, float epsilon = float(1e-3f));
    HAVOK_C_API bool HAVOK_C_CALL hkRotation_isOrthonormal(hkRotationRef ptr, float epsilon = float(1e-5f));